add some backend boilerplate, move over to flask architecture

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
-DATABASE_URL=db.sqlite3
-COVER_ART_DIR=cover_arts
-LOGS_DIR=logs
+DATABASE_PATH=/path/to/db.sqlite3
+COVER_ART_DIR=/path/to/cover_arts
+LOGS_DIR=/path/to/logs
+PID_PATH=/path/to/backend.pid
+MUSIC_DIRS=/home/user/music1:/home/user/music2
