--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,12 +5,21 @@ description = "A release-oriented music server."
 authors = ["azuline <azuline@riseup.net>"]
 license = "AGPL-3.0"
 
+[tool.poetry.scripts]
+repertoire = "src.__main__:run"
+
 [tool.poetry.dependencies]
 python = "^3.7"
 selectolax = "^0.2.7"
 python-dotenv = "^0.14.0"
 requests = "^2.24"
-tagfiles = "^0.3.0"
+tagfiles = "^0.3.1"
+flask = "^1.1"
+gevent = "^20.6"
+daemonize = "^2.5"
+huey = "^2.3"
+yoyo-migrations = "^7.2"
+click = "^7.1"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.4"
