--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "A release-oriented music server."
 authors = ["azuline <azuline@riseup.net>"]
 license = "AGPL-3.0"
+packages = [
+	{ include = "src" },
+]
 
 [tool.poetry.scripts]
 repertoire = "src.__main__:run"
@@ -20,6 +23,7 @@ daemonize = "^2.5"
 huey = "^2.3"
 yoyo-migrations = "^7.2"
 click = "^7.1"
+voluptuous = "^0.11.7"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.4"
