backend: redid the configuration and data management

--- a/yoyo.ini
+++ b/yoyo.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
-sources = migrations
+sources = backend/migrations
 migration_table = _yoyo_migration
 batch_mode = off
 verbosity = 0
-database = sqlite:///../db.sqlite3
+database = sqlite:///data/db.sqlite3
