--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ huey = "^2.3"
 yoyo-migrations = "^7.2"
 click = "^7.1"
 voluptuous = "^0.11.7"
+unidecode = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.4"
