--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ unidecode = "^1.1.1"
 isort = "^5.4"
 flake8 = "^3.8"
 black = "=20.8b1"
+flask-cors = "^3.0.8"
 
 [build-system]
 requires = ["poetry>=0.12"]
