--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "react-virtual": "^2.2.5"
+    "react-virtualized": "^9.22.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
