--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [
 repertoire = "backend.__main__:run"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.6"
 selectolax = "^0.2.7"
 python-dotenv = "^0.14.0"
 requests = "^2.24"
@@ -26,6 +26,7 @@ click = "^7.1"
 voluptuous = "^0.11.7"
 unidecode = "^1.1.1"
 pillow = "^7.2.0"
+backports-datetime-fromisoformat = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.4"
