--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ repertoire = "backend.__main__:run"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-selectolax = "^0.2.7"
 python-dotenv = "^0.14.0"
 requests = "^2.24"
 tagfiles = "^0.3.1"
@@ -33,6 +32,8 @@ isort = "^5.4"
 flake8 = "^3.8"
 black = "=20.8b1"
 flask-cors = "^3.0.8"
+pytest = "^6.1.1"
+pytest-cov = "^2.10.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
