backend: finish writing tests for config and util

--- a/backend/tests/data/config.ini
+++ b/backend/tests/data/config.ini
@@ -1,3 +1,4 @@
 [repertoire]
-music_directories = ["/tmp/dummy_music_directory"]
-index_crontab = 0 0 * * 0
+music_directories = []
+index_crontab = 0 0 * * *
+
