--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [
 repertoire = "backend.__main__:run"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.8"
 python-dotenv = "^0.14.0"
 requests = "^2.24"
 tagfiles = "^0.3.1"
@@ -25,7 +25,6 @@ click = "^7.1"
 voluptuous = "^0.11.7"
 unidecode = "^1.1.1"
 pillow = "^7.2.0"
-backports-datetime-fromisoformat = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.4"
@@ -34,6 +33,9 @@ black = "=20.8b1"
 flask-cors = "^3.0.8"
 pytest = "^6.1.1"
 pytest-cov = "^2.10.1"
+sphinx_rtd_theme = "^0.5.0"
+sphinx = "^3.2.1"
+sphinx-autodoc-typehints = "^1.11.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
