--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ click = "^7.1"
 voluptuous = "^0.11.7"
 unidecode = "^1.1.1"
 pillow = "^7.2.0"
+dataclasses-json = "^0.5.2"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.4"
