--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,28 @@ pytest-cov = "^2.10.1"
 sphinx_rtd_theme = "^0.5.0"
 sphinx = "^3.2.1"
 sphinx-autodoc-typehints = "^1.11.1"
+snapshottest = "^0.6.0"
+
+[tool.black]
+line-length = 88
+exclude = '''
+
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+	| snapshots
+  )/
+)
+'''
 
 [build-system]
 requires = ["poetry>=0.12"]
