--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,11 @@
 max-line-length = 89
 max-complexity = 12
 ignore = E203 E402 W503
+exclude = snapshots
 
 [isort]
 line_length = 89
 include_trailing_comma = true
 wrap_length = 1
 multi_line_output = 3
+skip = snapshots
