--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ snapshottest = "^0.6.0"
 sphinx = "^3.2.1"
 sphinx_rtd_theme = "^0.5.0"
 sphinx-autodoc-typehints = "^1.11.1"
+mypy = "^0.790"
 
 [tool.black]
 line-length = 88
