--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ sphinx = "^3.2.1"
 sphinx_rtd_theme = "^0.5.0"
 sphinx-autodoc-typehints = "^1.11.1"
 mypy = "^0.790"
+sphinx-automodapi = "^0.13"
 
 [tool.black]
 line-length = 88
