--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ repertoire = "backend.__main__:run"
 python = "^3.8"
 python-dotenv = "^0.14.0"
 click = "^7.1"
-dataclasses-json = "^0.5.2"
 flask = "^1.1"
 huey = "^2.3"
 gevent = "^20.6"
@@ -35,10 +34,9 @@ pytest = "^6.1.1"
 pytest-cov = "^2.10.1"
 snapshottest = "^0.6.0"
 sphinx = "^3.2.1"
-sphinx_rtd_theme = "^0.5.0"
 sphinx-autodoc-typehints = "^1.11.1"
-mypy = "^0.790"
 sphinx-automodapi = "^0.13"
+sphinx-rtd-theme = "^0.5.0"
 
 [tool.black]
 line-length = 88
