--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,13 @@ huey = "^2.3"
 gevent = "^20.6"
 pillow = "^7.2.0"
 requests = "^2.24"
-tagfiles = "^0.3.1"
+tagfiles = "^0.3.2"
 unidecode = "^1.1.1"
 voluptuous = "^0.11.7"
 yoyo-migrations = "^7.2"
 
 [tool.poetry.dev-dependencies]
+autodocsumm = "0.1.13"
 black = "=20.8b1"
 flake8 = "^3.8"
 flask-cors = "^3.0.8"
@@ -35,7 +36,6 @@ pytest-cov = "^2.10.1"
 snapshottest = "^0.6.0"
 sphinx = "^3.2.1"
 sphinx-autodoc-typehints = "^1.11.1"
-sphinx-automodapi = "^0.13"
 sphinx-rtd-theme = "^0.5.0"
 
 [tool.black]
