--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,13 @@ repertoire = "backend.__main__:run"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-python-dotenv = "^0.14.0"
+ariadne = "^0.12.0"
 click = "^7.1"
 flask = "^1.1"
 huey = "^2.3"
 gevent = "^20.6"
 pillow = "^7.2.0"
+python-dotenv = "^0.14.0"
 requests = "^2.24"
 tagfiles = "^0.3.2"
 unidecode = "^1.1.1"
