--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,10 @@ repertoire = "backend.__main__:run"
 python = "^3.8"
 ariadne = "^0.12.0"
 click = "^7.1"
-flask = "^1.1"
 huey = "^2.3"
-gevent = "^20.6"
 pillow = "^7.2.0"
 python-dotenv = "^0.14.0"
+quart = "^0.13.1"
 requests = "^2.24"
 tagfiles = "^0.3.2"
 unidecode = "^1.1.1"
@@ -30,10 +29,10 @@ yoyo-migrations = "^7.2"
 autodocsumm = "0.1.13"
 black = "=20.8b1"
 flake8 = "^3.8"
-flask-cors = "^3.0.8"
 isort = "^5.4"
 pytest = "^6.1.1"
 pytest-cov = "^2.10.1"
+quart-cors = "^0.3.0"
 snapshottest = "^0.6.0"
 sphinx = "^3.2.1"
 sphinx-autodoc-typehints = "^1.11.1"
