--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ black = "=20.8b1"
 flake8 = "^3.8"
 isort = "^5.4"
 pytest = "^6.1.1"
+pytest-asyncio = "^0.14.0"
 pytest-cov = "^2.10.1"
 quart-cors = "^0.3.0"
 snapshottest = "^0.6.0"
