--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ snapshottest = "^0.6.0"
 sphinx = "^3.2.1"
 sphinx-autodoc-typehints = "^1.11.1"
 sphinx-rtd-theme = "^0.5.0"
+"sphinxcontrib.httpdomain" = "^1.7.0"
 
 [tool.black]
 line-length = 88
