--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,23 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
+    "clsx": "^1.1.1",
     "graphql": "^15.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^6.0.9",
     "tailwindcss": "^1.9.6",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "build:css": "tailwind build src/index.tailwind.css -o src/index.css",
+    "prestart": "yarn build:css",
     "start": "react-scripts start",
+    "prebuild": "yarn build:css",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
