--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,6 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,8 +13,10 @@
     "@types/react-router-dom": "^5.1.6",
     "clsx": "^1.1.1",
     "graphql": "^15.3.0",
+    "graphql-request": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^2.25.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-toastify": "^6.0.9",
