--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-toast-notifications": "^2.4.0",
     "clsx": "^1.1.1",
     "graphql": "^15.3.0",
     "graphql-request": "^3.2.0",
@@ -19,7 +20,7 @@
     "react-query": "^2.25.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-toastify": "^6.0.9",
+    "react-toast-notifications": "^2.4.0",
     "tailwindcss": "^1.9.6",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
