--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.5.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,10 +17,10 @@
     "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-popper": "^2.2.3",
     "react-query": "^2.25.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-tiny-popover": "^6.0.0-beta.2",
     "react-toast-notifications": "^2.4.0",
     "tailwindcss": "^1.9.6",
     "typescript": "^4.0.3",
@@ -34,6 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src --ext .ts,.tsx --fix",
+    "prestorybook": "yarn build:css",
     "storybook": "start-storybook -p 6006 -s public --no-dll",
     "build-storybook": "build-storybook -s public --no-dll"
   },
