--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,6 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.5.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,8 +15,8 @@
     "@types/react-truncate": "^2.3.3",
     "clsx": "^1.1.1",
     "react": "^17.0.1",
+    "react-awesome-popover": "^6.1.1",
     "react-dom": "^17.0.1",
-    "react-popper": "^2.2.3",
     "react-query": "^2.25.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
