backend: handle invalid dates causing error, remove artist selector, add filter to artist chooser, more styling

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react-toast-notifications": "^2.4.0",
     "@types/react-truncate": "^2.3.3",
     "clsx": "^1.1.1",
+    "fuse.js": "^6.4.3",
     "react": "^17.0.1",
     "react-awesome-popover": "^6.1.1",
     "react-dom": "^17.0.1",
