--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,16 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-toast-notifications": "^2.4.0",
-    "@types/react-truncate": "^2.3.3",
+    "@types/react-virtualized": "^9.21.10",
     "clsx": "^1.1.1",
     "fuse.js": "^6.4.3",
     "react": "^17.0.1",
-    "react-awesome-popover": "^6.1.1",
     "react-dom": "^17.0.1",
     "react-query": "^2.25.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-toast-notifications": "^2.4.0",
+    "react-virtualized": "^9.22.2",
     "tailwindcss": "^1.9.6",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
