--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,6 +39,7 @@ sphinx = "^3.2.1"
 sphinx-autodoc-typehints = "^1.11.1"
 sphinx-rtd-theme = "^0.5.0"
 "sphinxcontrib.httpdomain" = "^1.7.0"
+mypy = "^0.790"
 
 [tool.black]
 line-length = 88
