--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@types/react-toast-notifications": "^2.4.0",
     "@types/react-virtualized": "^9.21.10",
     "clsx": "^1.1.1",
+    "csstype": "^3.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^2.25.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-toast-notifications": "^2.4.0",
