--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-slider": "^1.0.0",
     "@types/react-toast-notifications": "^2.4.0",
     "@types/react-virtualized": "^9.21.10",
     "clsx": "^1.1.1",
@@ -22,6 +23,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-slider": "^1.1.2",
     "react-toast-notifications": "^2.4.0",
     "react-virtualized": "^9.22.2",
     "tailwindcss": "^2.0.1",
