--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,15 +54,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.5.0",
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.1.0",
     "eslint": "^7.12.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "postcss": "^8.1.7",
     "prettier": "2.1.2",
