--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src --ext .ts,.tsx --fix"
+    "lint": "eslint ./src --ext .ts,.tsx --fix",
+    "sort-css": "rustywind --write ./src"
   },
   "browserslist": {
     "production": [
@@ -69,6 +70,7 @@
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "postcss": "^8.1.7",
     "prettier": "2.1.2",
-    "react-is": "^17.0.1"
+    "react-is": "^17.0.1",
+    "rustywind": "^0.6.7"
   }
 }
