--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,6 +39,7 @@ sphinx-autodoc-typehints = "^1.11.1"
 sphinx-rtd-theme = "^0.5.0"
 "sphinxcontrib.httpdomain" = "^1.7.0"
 mypy = "^0.790"
+sphinx-js = "^3.1"
 
 [tool.black]
 line-length = 88
