--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,20 @@ jobs:
           poetry run isort -c .
           poetry run flake8 .
 
+      - name: Install frontend dependencies.
+        run: |
+          cd frontend
+          yarn install
+
+      - name: Run frontend type check.
+        run: |
+          cd frontend
+          yarn tsc
+
+      - name: Run frontend lint check.
+        run: |
+          cd frontend
+          yarn eslint src/ --ext .ts,.tsx --max-warnings=0
+
       - name: Upload coverage.
         run: bash <(curl -s https://codecov.io/bash) -cF python
