--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,8 +38,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src --ext .ts,.tsx --fix",
-    "sort-css": "rustywind --write ./src"
+    "lint": "eslint src/ --ext .ts,.tsx --fix",
+    "sort-css": "rustywind --write src/"
   },
   "browserslist": {
     "production": [
