--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,12 +27,13 @@
     "react-toast-notifications": "^2.4.0",
     "react-virtualized": "^9.22.2",
     "tailwindcss": "^2.0.1",
-    "typescript": "^4.0.3",
+    "typescript": "4.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build:css": "tailwind build src/index.tailwind.css -o src/index.css",
+    "prebuild": "NODE_ENV=production yarn build:css",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -59,7 +60,6 @@
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.5.0",
     "autoprefixer": "^10.0.2",
-    "babel-loader": "^8.1.0",
     "eslint": "^7.12.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.14.0",
