make images independent from release table's cover art field

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -12,6 +12,7 @@ check:
 lint:
 	poetry run black .
 	poetry run isort .
+	poetry run flake8 .
 
 docs:
 	rm -rf ../docs/_build/html ../docs/_build/doctrees
