add user nickname mutation to backend; refactor frontend lib; patch up frontend settings page

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -11,3 +11,5 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-yoyo.*]
 ignore_missing_imports = True
+[mypy-pytest.*]
+ignore_missing_imports = True
