--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background-700_color": "#ffffff"
+  "background_color": "#ffffff"
 }
