--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-simple-import-sort": "^6.0.1",
+    "eslint-plugin-sort-keys-fix": "^1.1.1",
     "postcss": "^8.1.7",
     "prettier": "^2.2.1",
     "react-is": "^17.0.1",
