--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,12 +23,12 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^4.0.1",
     "react-slider": "^1.1.2",
     "react-toast-notifications": "^2.4.0",
     "react-virtualized": "^9.22.2",
     "tailwindcss": "^2.0.1",
-    "typescript": "^3.9.7",
+    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -61,7 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.5.0",
     "autoprefixer": "^10.0.2",
-    "eslint": "^6.6.0",
+    "eslint": "^7.17.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.22.0",
