--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-.env
 .venv
+
+# Backend
 __pycache__/
 *.egg-info
 *.log
@@ -9,8 +10,28 @@ _build/
 *.pid
 tags
 /backend/htmlcov/
-
 /backend/yoyo.ini
 /data/
 /scripts/
+
+# Frontend
+/frontend/.eslintcache
+/frontend/src/index.css
+/frontend/node_modules
+/frontend/.pnp
+.pnp.js
+/frontend/coverage
+/frontend/build
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 .vscode
+.env
