--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -17,7 +17,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: abatilo/actions-poetry@v2.1.0
+      - name: Cache dependencies.
+        id: cache-deps
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies.
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run tests.
         run: poetry run pytest --cov-report=xml --cov=. --cov-branch tests/
@@ -34,7 +41,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: abatilo/actions-poetry@v2.1.0
+      - name: Cache dependencies.
+        id: cache-deps
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies.
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run type check.
         run: poetry run mypy src/
@@ -49,7 +63,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: abatilo/actions-poetry@v2.1.0
+      - name: Cache dependencies.
+        id: cache-deps
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies.
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run lint check.
         run: |
@@ -67,7 +88,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: abatilo/actions-poetry@v2.1.0
+      - name: Cache dependencies.
+        id: cache-deps
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies.
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Diff schema.sql and generated schema.
         run: |
