cache deps in frontend ci

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -15,7 +15,14 @@ jobs:
         working-directory: 'frontend/'
     steps:
       - uses: actions/checkout@v2
+      - name: Cache dependencies.
+        id: cache-deps
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: Install dependencies.
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: yarn install
       - name: Run type check.
         run: yarn tsc
@@ -28,7 +35,14 @@ jobs:
         working-directory: 'frontend/'
     steps:
       - uses: actions/checkout@v2
+      - name: Cache dependencies.
+        id: cache-deps
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: Install dependencies.
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: yarn install
       - name: Run lint check.
         run: yarn eslint src/ --ext .ts,.tsx --max-warnings=0
