--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
       - "127.0.0.1:45731:45731"
     volumes:
       - data:/data
+      - /my/music1:/music/lib1
+      - /my/music2:/music/lib2
 volumes:
   data:
