--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -2,11 +2,11 @@
 max-line-length = 88
 max-complexity = 12
 ignore = E203 E402 W503
-exclude = snapshots
+exclude = snapshots .venv setup.py
 
 [isort]
 line_length = 88
 include_trailing_comma = true
 wrap_length = 1
 multi_line_output = 3
-skip = snapshots
+skip = snapshots,.venv
