--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -51,7 +51,7 @@ jobs:
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run type check.
-        run: poetry run mypy src/
+        run: make typecheck
 
   lint_check:
     name: Lint check
@@ -73,10 +73,7 @@ jobs:
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run lint check.
-        run: |
-          poetry run black --check .
-          poetry run isort -c .
-          poetry run flake8 .
+        run: make lintcheck
 
   schema:
     name: Schema
@@ -98,8 +95,26 @@ jobs:
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Diff schema.sql and generated schema.
-        run: |
-          mv schema.sql schema.sql.old
-          mkdir ../data
-          make schema
-          diff schema.sql.old schema.sql
+        run: make schemacheck
+
+  setup_py:
+    name: setup.py
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: 'backend/'
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - uses: abatilo/actions-poetry@v2.1.0
+      - name: Cache dependencies.
+        id: cache-deps
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+      - name: Install dependencies.
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: poetry install
+      - name: Diff setup.py and generated setup.py.
+        run: make setupcheck
