--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -40,11 +40,11 @@ sphinx-rtd-theme = "^0.5.0"
 "sphinxcontrib.httpdomain" = "^1.7.0"
 mypy = "^0.790"
 sphinx-js = "^3.1"
+dephell = "^0.8.3"
 
 [tool.black]
 line-length = 88
-exclude = '''
-
+force-exclude = '''
 (
   /(
       \.eggs         # exclude a few common directories in the
@@ -58,8 +58,8 @@ exclude = '''
     | build
     | dist
 	| snapshots
-    | setup.py
   )/
+  | ^/setup\.py
 )
 '''
 
