--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -41,6 +41,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: abatilo/actions-poetry@v2.1.0
+        with:
+          poetry-version: 1.1.4
       - name: Cache dependencies.
         id: cache-deps
         uses: actions/cache@v2
@@ -63,6 +65,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: abatilo/actions-poetry@v2.1.0
+        with:
+          poetry-version: 1.1.4
       - name: Cache dependencies.
         id: cache-deps
         uses: actions/cache@v2
@@ -85,6 +89,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: abatilo/actions-poetry@v2.1.0
+        with:
+          poetry-version: 1.1.4
       - name: Cache dependencies.
         id: cache-deps
         uses: actions/cache@v2
@@ -107,6 +113,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: abatilo/actions-poetry@v2.1.0
+        with:
+          poetry-version: 1.1.4
       - name: Cache dependencies.
         id: cache-deps
         uses: actions/cache@v2
