remove CRA; add snowpack files

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,9 +19,17 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "paths": {
+      "@repertoire/*": ["./src/*"],
+      // If you configured any Snowpack aliases, add them here.
+      // Add this line to get types for streaming imports (packageOptions.source="remote"):
+      //     "*": [".snowpack/types/*"]
+      // More info: https://www.snowpack.dev/guides/streaming-imports
+    }
   },
   "include": [
-    "src"
+    "src",
+    "types"
   ]
 }
