--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,6 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@apollo/client": "^3.2.9",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/react-slider": "^1.0.0",
-    "@types/react-toast-notifications": "^2.4.0",
-    "@types/react-virtualized": "^9.21.10",
     "clsx": "^1.1.1",
     "csstype": "^3.0.5",
     "graphql": "^15.4.0",
@@ -23,23 +12,18 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
     "react-slider": "^1.1.2",
     "react-toast-notifications": "^2.4.0",
     "react-virtualized": "^9.22.2",
-    "tailwindcss": "^2.0.1",
-    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "snowpack dev",
     "build:css": "tailwind build src/index.tailwind.css -o src/index.css",
-    "prebuild": "NODE_ENV=production yarn build:css",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/ --ext .ts,.tsx --fix",
-    "sort-css": "rustywind --write src/"
+    "build": "snowpack build",
+    "test": "web-test-runner \"src/**/*.test.tsx\"",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "headwind.classRegex": {
     "javascriptreact": "(?:\\s*[\\\"\\'\\`]([_a-zA-Z0-9\\s\\-\\:\\/]+)[\\\"\\'\\`])|(?:\\btw\\s*`([_a-zA-Z0-9\\s\\-\\:\\/]*)`)"
@@ -58,9 +42,24 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@snowpack/plugin-dotenv": "^2.0.5",
+    "@snowpack/plugin-postcss": "^1.1.0",
+    "@snowpack/plugin-react-refresh": "^2.4.0",
+    "@snowpack/plugin-typescript": "^1.2.0",
+    "@snowpack/web-test-runner-plugin": "^0.2.0",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/react-slider": "^1.0.0",
+    "@types/react-toast-notifications": "^2.4.0",
+    "@types/react-virtualized": "^9.21.10",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.5.0",
     "autoprefixer": "^10.0.2",
+    "cssnano": "^4.1.10",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.14.0",
@@ -75,6 +74,9 @@
     "prettier": "^2.2.1",
     "react-is": "^17.0.1",
     "rustywind": "^0.6.7",
-    "typedoc": "^0.19.2"
+    "snowpack": "^3.0.1",
+    "tailwindcss": "^2.0.1",
+    "typedoc": "^0.19.2",
+    "typescript": "^4.1.3"
   }
 }
