--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,9 @@
   "proxy": "http://localhost:5000",
   "scripts": {
     "start": "snowpack dev",
-    "build:css": "tailwind build src/index.tailwind.css -o src/index.css",
+    "dev:css": "tailwind build src/index.tailwind.css -o src/index.css",
     "build": "snowpack build",
+    "build:css": "postcss src/index.tailwind.css -o src/index.css",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
@@ -27,9 +28,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "@snowpack/plugin-dotenv": "^2.0.5",
-    "@snowpack/plugin-postcss": "^1.1.0",
     "@snowpack/plugin-react-refresh": "^2.4.0",
+    "@snowpack/plugin-run-script": "^2.3.0",
     "@snowpack/plugin-typescript": "^1.2.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/react": "^11.1.0",
@@ -55,7 +55,9 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
+    "http-proxy": "^1.18.1",
     "postcss": "^8.1.7",
+    "postcss-cli": "^8.3.1",
     "prettier": "^2.2.1",
     "react-is": "^17.0.1",
     "rustywind": "^0.6.7",
