--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,13 @@
     "start": "snowpack dev",
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
-    "lint": "eslint src/ --ext .ts,.tsx --fix"
+    "lint": "eslint src/ --ext .ts,.tsx --fix",
+    "postinstall": "cd .. && husky install frontend/.husky"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
     "@apollo/client": "^3.2.9",
@@ -53,6 +59,8 @@
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "http-proxy": "^1.18.1",
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4",
     "postcss": "^8.1.7",
     "postcss-cli": "^8.3.1",
     "prettier": "^2.2.1",
