--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9.1'
       - uses: abatilo/actions-poetry@v2.1.0
       - name: Cache dependencies.
         id: cache-deps
@@ -40,6 +42,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9.1'
       - uses: abatilo/actions-poetry@v2.1.0
         with:
           poetry-version: 1.1.4
@@ -64,6 +68,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9.1'
       - uses: abatilo/actions-poetry@v2.1.0
         with:
           poetry-version: 1.1.4
@@ -88,6 +94,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9.1'
       - uses: abatilo/actions-poetry@v2.1.0
         with:
           poetry-version: 1.1.4
@@ -112,6 +120,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9.1'
       - uses: abatilo/actions-poetry@v2.1.0
         with:
           poetry-version: 1.1.4
