--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,6 +16,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": "./",
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ],
     "paths": {
       "~/*": ["./src/*"],
       "*": [".snowpack/types/*"]
