fix types across frontend

--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -12,3 +12,6 @@ generates:
       - "typescript-operations"
       - "typescript-react-apollo"
       - "typescript-apollo-client-helpers"
+    config:
+      typesPrefix: I
+      avoidOptionals: true
