Use GraphQL Codegen in frontend instead of manually-written wrappers (#152)

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -46,3 +46,25 @@ jobs:
         run: CI=true yarn install
       - name: Run lint check.
         run: CI=true yarn eslint src/ --ext .ts,.tsx --max-warnings=0
+
+  gql_codegen:
+    name: GraphQL Codegen
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: 'frontend/'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Cache dependencies.
+        id: cache-deps
+        uses: actions/cache@v2
+        with:
+          path: frontend/node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+      - name: Install dependencies.
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: CI=true yarn install
+      - name: Run codegen.
+        run: CI=true yarn codegen
+      - name: Check for dirty files.
+        run: bash -c '[[ -z $(git status -s) ]] || (exit 1)'
