--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,15 @@
     "lint": "eslint src/ --ext .ts,.tsx --fix",
     "codegen": "graphql-codegen --config codegen.yml"
   },
+  "babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
+  },
   "dependencies": {
     "@apollo/client": "^3.2.9",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "clsx": "^1.1.1",
     "csstype": "^3.0.5",
     "graphql": "^15.4.0",
@@ -22,10 +29,13 @@
     "react-slider": "^1.1.2",
     "react-toast-notifications": "^2.4.0",
     "react-virtualized": "^9.22.2",
+    "tailwindcss": "^2.0.1",
+    "twin.macro": "^2.2.3",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "@graphql-codegen/cli": "1.20.1",
     "@graphql-codegen/introspection": "1.18.1",
     "@graphql-codegen/near-operation-file-preset": "^1.17.13",
@@ -37,6 +47,7 @@
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "@snowpack/plugin-run-script": "^2.3.0",
     "@snowpack/plugin-typescript": "^1.2.0",
+    "@snowpack/plugin-webpack": "^2.3.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -68,7 +79,6 @@
     "react-is": "^17.0.1",
     "rustywind": "^0.6.7",
     "snowpack": "^3.0.1",
-    "tailwindcss": "^2.0.1",
     "typedoc": "^0.20.24",
     "typescript": "^4.1.3"
   },
