remove unnecessary path from tsconfig.json

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,8 +17,7 @@
     "jsx": "react-jsx",
     "baseUrl": "./",
     "paths": {
-      "~/*": ["./src/*"],
-      "*": [".snowpack/types/*"]
+      "~/*": ["./src/*"]
     }
   },
   "include": ["src", "types"]
