--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-react-jsx": "^7.12.16",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "@graphql-codegen/cli": "1.20.1",
     "@graphql-codegen/introspection": "1.18.1",
@@ -44,6 +45,7 @@
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.17.14",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
+    "@snowpack/app-scripts-react": "^2.0.0",
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "@snowpack/plugin-run-script": "^2.3.0",
     "@snowpack/plugin-typescript": "^1.2.0",
