fully migrate shit over to twin.macro

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,7 @@
   },
   "babelMacros": {
     "twin": {
-      "preset": "emotion",
-      "includeClassNames": true
+      "preset": "emotion"
     }
   },
   "dependencies": {
