--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,15 @@
     "lint": "eslint src/ --ext .ts,.tsx --fix",
     "codegen": "graphql-codegen --config codegen.yml"
   },
+  "babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
+  },
   "dependencies": {
     "@apollo/client": "^3.2.9",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "clsx": "^1.1.1",
     "csstype": "^3.0.5",
     "graphql": "^15.4.0",
@@ -22,10 +29,14 @@
     "react-slider": "^1.1.2",
     "react-toast-notifications": "^2.4.0",
     "react-virtualized": "^9.22.2",
+    "tailwindcss": "^2.0.1",
+    "twin.macro": "^2.2.3",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-react-jsx": "^7.12.16",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "@graphql-codegen/cli": "1.20.1",
     "@graphql-codegen/introspection": "1.18.1",
     "@graphql-codegen/near-operation-file-preset": "^1.17.13",
@@ -34,9 +45,10 @@
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.17.14",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
+    "@snowpack/app-scripts-react": "^2.0.0",
     "@snowpack/plugin-react-refresh": "^2.4.0",
-    "@snowpack/plugin-run-script": "^2.3.0",
     "@snowpack/plugin-typescript": "^1.2.0",
+    "@snowpack/plugin-webpack": "^2.3.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -49,8 +61,6 @@
     "@types/react-virtualized": "^9.21.10",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.5.0",
-    "autoprefixer": "^10.0.2",
-    "cssnano": "^4.1.10",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.14.0",
@@ -62,13 +72,10 @@
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "http-proxy": "^1.18.1",
-    "postcss": "^8.1.7",
-    "postcss-cli": "^8.3.1",
+    "postcss": "^8.2.6",
     "prettier": "^2.2.1",
     "react-is": "^17.0.1",
-    "rustywind": "^0.6.7",
     "snowpack": "^3.0.1",
-    "tailwindcss": "^2.0.1",
     "typedoc": "^0.20.24",
     "typescript": "^4.1.3"
   },
