--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -13,3 +13,5 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-pytest.*]
 ignore_missing_imports = True
+[mypy-*.snapshots.*]
+ignore_errors = True
