--- a/frontend/babel.config.json
+++ b/frontend/babel.config.json
@@ -1,6 +1,7 @@
 {
   "extends": "@snowpack/app-scripts-react/babel.config.json",
   "plugins": [
+    "babel-plugin-twin",
     "babel-plugin-macros",
     [
       "@emotion/babel-plugin-jsx-pragmatic",
