--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "@types/react-virtualized": "^9.21.10",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.5.0",
+    "babel-plugin-twin": "^1.0.2",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.14.0",
