--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -1,6 +1,8 @@
 [mypy]
 [mypy-tagfiles.*]
 ignore_missing_imports = True
+[mypy-pysqlite3.*]
+ignore_missing_imports = True
 [mypy-huey.*]
 ignore_missing_imports = True
 [mypy-unidecode.*]
