--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -24,9 +24,8 @@ jobs:
       - name: Install dependencies.
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: CI=true yarn install
-      - name: Run type check.
+      - name: Run type check
         run: CI=true yarn tsc
-
   lint_check:
     name: Lint check
     runs-on: ubuntu-latest
@@ -44,9 +43,8 @@ jobs:
       - name: Install dependencies.
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: CI=true yarn install
-      - name: Run lint check.
+      - name: Run lint check
         run: CI=true yarn eslint src/ --ext .ts,.tsx --max-warnings=0
-
   gql_codegen:
     name: GraphQL Codegen
     runs-on: ubuntu-latest
@@ -64,7 +62,9 @@ jobs:
       - name: Install dependencies.
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: CI=true yarn install
-      - name: Run codegen.
+      - name: Run codegen
         run: CI=true yarn codegen
-      - name: Check for dirty files.
+      - name: Diff
+        run: git diff
+      - name: Compare
         run: bash -c '[[ -z $(git status -s) ]] || (exit 1)'
