build sqlite from source

--- a/.github/src/backend.yml
+++ b/.github/src/backend.yml
@@ -16,6 +16,7 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
+      - uses: ./.github/actions/build-sqlite
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9.1'
