--- a/.github/src/frontend.yml
+++ b/.github/src/frontend.yml
@@ -16,13 +16,13 @@ jobs:
         working-directory: 'frontend/'
     steps:
       - uses: actions/checkout@v2
-      - name: Cache dependencies.
+      - name: Cache dependencies
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: frontend/node_modules
           key: {{ "${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}" }}
-      - name: Install dependencies.
+      - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: CI=true yarn install
       {% for step in job.steps %}
