--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,6 +15,17 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
+      - name: Cache SQLite
+        id: cache-sqlite
+        uses: actions/cache@v2
+        with:
+          path: /tmp/sqlite
+          key: ${{ runner.os }}-sqlite-2021-02-21
+      - name: Build SQLite
+        if: steps.cache-sqlite.outputs.cache-hit != 'true'
+        uses: ./.github/actions/build-sqlite
+      - name: Install SQLite
+        uses: ./.github/actions/install-sqlite
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9.1'
@@ -35,7 +46,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies.
+      - name: Install dependencie
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run tests
@@ -50,6 +61,17 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
+      - name: Cache SQLite
+        id: cache-sqlite
+        uses: actions/cache@v2
+        with:
+          path: /tmp/sqlite
+          key: ${{ runner.os }}-sqlite-2021-02-21
+      - name: Build SQLite
+        if: steps.cache-sqlite.outputs.cache-hit != 'true'
+        uses: ./.github/actions/build-sqlite
+      - name: Install SQLite
+        uses: ./.github/actions/install-sqlite
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9.1'
@@ -70,7 +92,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies.
+      - name: Install dependencie
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run type check
@@ -83,6 +105,17 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
+      - name: Cache SQLite
+        id: cache-sqlite
+        uses: actions/cache@v2
+        with:
+          path: /tmp/sqlite
+          key: ${{ runner.os }}-sqlite-2021-02-21
+      - name: Build SQLite
+        if: steps.cache-sqlite.outputs.cache-hit != 'true'
+        uses: ./.github/actions/build-sqlite
+      - name: Install SQLite
+        uses: ./.github/actions/install-sqlite
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9.1'
@@ -103,7 +136,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies.
+      - name: Install dependencie
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run lint check
@@ -116,6 +149,17 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
+      - name: Cache SQLite
+        id: cache-sqlite
+        uses: actions/cache@v2
+        with:
+          path: /tmp/sqlite
+          key: ${{ runner.os }}-sqlite-2021-02-21
+      - name: Build SQLite
+        if: steps.cache-sqlite.outputs.cache-hit != 'true'
+        uses: ./.github/actions/build-sqlite
+      - name: Install SQLite
+        uses: ./.github/actions/install-sqlite
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9.1'
@@ -136,11 +180,11 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies.
+      - name: Install dependencie
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Generate schema
-        run: make schema
+        run: DATA_PATH=../data make schema
       - name: Diff
         run: git diff
       - name: Compare
@@ -153,6 +197,17 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
+      - name: Cache SQLite
+        id: cache-sqlite
+        uses: actions/cache@v2
+        with:
+          path: /tmp/sqlite
+          key: ${{ runner.os }}-sqlite-2021-02-21
+      - name: Build SQLite
+        if: steps.cache-sqlite.outputs.cache-hit != 'true'
+        uses: ./.github/actions/build-sqlite
+      - name: Install SQLite
+        uses: ./.github/actions/install-sqlite
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9.1'
@@ -173,7 +228,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies.
+      - name: Install dependencie
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Generate setup files
