--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -15,13 +15,13 @@ jobs:
         working-directory: 'frontend/'
     steps:
       - uses: actions/checkout@v2
-      - name: Cache dependencies.
+      - name: Cache dependencies
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: frontend/node_modules
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Install dependencies.
+      - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: CI=true yarn install
       - name: Run type check
@@ -34,13 +34,13 @@ jobs:
         working-directory: 'frontend/'
     steps:
       - uses: actions/checkout@v2
-      - name: Cache dependencies.
+      - name: Cache dependencies
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: frontend/node_modules
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Install dependencies.
+      - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: CI=true yarn install
       - name: Run lint check
@@ -53,13 +53,13 @@ jobs:
         working-directory: 'frontend/'
     steps:
       - uses: actions/checkout@v2
-      - name: Cache dependencies.
+      - name: Cache dependencies
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: frontend/node_modules
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Install dependencies.
+      - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: CI=true yarn install
       - name: Run codegen
