--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,9 +21,9 @@ python-dotenv = "^0.14.0"
 quart = "^0.13.1"
 requests = "^2.24"
 tagfiles = "^0.3.2"
-unidecode = "^1.1.1"
 voluptuous = "^0.11.7"
 yoyo-migrations = "^7.2"
+pysqlite3-binary = "^0.4.5"
 
 [tool.poetry.dev-dependencies]
 autodocsumm = "0.1.13"
