--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -113,6 +113,11 @@ pillow==7.2.0; python_version >= "3.5" \
 priority==1.3.0; python_version >= "3.7" and python_full_version >= "3.7.0" \
     --hash=sha256:be4fcb94b5e37cdeb40af5533afe6dd603bd665fe9c8b3052610fc1001d5d1eb \
     --hash=sha256:6bc1961a6d7fcacbfc337769f1a382c8e746566aaa365e78047abe9f66b2ffbe
+pysqlite3-binary==0.4.5 \
+    --hash=sha256:51dd11044f667ae2b32ba35d66bca0ee04242aa5bddb05817c645f3fab9b7807 \
+    --hash=sha256:b96018b61636df341af22b0f15d37fc195e0300e8e8585d39d2b2ee22c25b4ba \
+    --hash=sha256:7e03784248a89b68e7ef9bb7af85e5e2abde8cd1839be0c3ca4cec695bc22036 \
+    --hash=sha256:a154e72ba12367ac21119a0780063afe089800a4f6bde01751d0183b0d3d2363
 python-dotenv==0.14.0 \
     --hash=sha256:8c10c99a1b25d9a68058a1ad6f90381a62ba68230ca93966882a4dbc3bc9c33d \
     --hash=sha256:c10863aee750ad720f4f43436565e4c1698798d763b63234fb5021b6c616e423
@@ -141,9 +146,6 @@ typing-extensions==3.7.4.3 \
     --hash=sha256:dafc7639cde7f1b6e1acc0f457842a83e722ccca8eef5270af2d74792619a89f \
     --hash=sha256:7cb407020f00f7bfc3cb3e7881628838e69d8f3fcab2f64742a5e76b2f841918 \
     --hash=sha256:99d4073b617d30288f569d3f13d2bd7548c3a7e4c8de87db09a9d29bb3a4a60c
-unidecode==1.1.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0") \
-    --hash=sha256:1d7a042116536098d05d599ef2b8616759f02985c85b4fef50c78a5aaf10822a \
-    --hash=sha256:2b6aab710c2a1647e928e36d69c21e76b453cd455f4e2621000e54b2a9b8cce8
 urllib3==1.25.11; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" \
     --hash=sha256:f5321fbe4bf3fefa0efd0bfe7fb14e90909eb62a48ccda331726b4319897dd5e \
     --hash=sha256:8d7eaa5a82a1cac232164990f04874c594c9453ec55eef02eab885aa02fc17a2
